2012-06-24 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/Main.java: Added search profiles feature.
	* res/layout/main.xml: UI changes. Added search profiles feature.
	* res/values/strings.xml: Added new entries.

2012-06-23 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/Core.java: Fixed a bug in the isOnline() function.
	* src/pandroid_event_viewer/pandorafms/Options.java: Improved the connection checking functionality.
	* src/pandroid_event_viewer/pandorafms/API.java: Added getTags().
	* src/pandroid_event_viewer/pandorafms/Main.java: Now the tags are getted by API.getTags().

2012-06-21 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/Core.java: Added a new method which checks if a website is online.
	* src/pandroid_event_viewer/pandorafms/Options.java: Fixed a bug. The app didn't check if the url were online before checking the certificate.

2012-06-21 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/EventList.java: Restored to the previous version.
	* src/pandroid_event_viewer/pandorafms/Core.java: Added a line which checks if the connection is secure.
	* src/pandroid_event_viewer/pandorafms/Options.java: Made some changes in certificate checking.
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java: Now, if there are any problem parsing data received from server.
	* res/layout/list_view_layout.xml: Restored to the previous version.
	* res/layout/item_list_event_layout.xml: Restored to the previous version.
	* res/values/strings.xml: Added new entries.

2012-06-20 Santiago Munín <burning1@gmail.com>
	
	* src/pandroid_event_viewer/pandorafms/API.java: New class, it will provide all API calls.
	* src/pandroid_event_viewer/pandorafms/EventList.java: Loading more events on scroll down.
	* src/pandroid_event_viewer/pandorafms/Core.java: Added HTTPS connections.