@@ -1,4 +1,7 @@
 2012-06-24 Santiago Munín <burning1@gmail.com>
+	* src/pandroid_event_viewer/pandorafms/Main.java: Removed getGroups function, now it calls API.getGroups().
+
+2012-06-24 Santiago Munín <burning1@gmail.com>
 	* src/pandroid_event_viewer/pandorafms/Main.java: Added search profiles feature.
 	* res/layout/main.xml: UI changes. Added search profiles feature.
 	* res/values/strings.xml: Added new entries.
